# sentiric-llm-service

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  LOGIC.md  README.md  TASKS.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/core/: config.py  logging.py
app/static/: script.js
app/templates/: index.html
