[tool.poetry]
name = "sentiric-llm-service"
version = "0.1.0"
description = "AI Gateway for Sentiric, providing access to various LLMs."
authors = ["Azmi ŞAHİN <6445951+azmisahin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
structlog = ">=24.1.0"
python-dotenv = ">=1.0.1"
google-generativeai = ">=0.5.2"
colorama = ">=0.4.6"
pydantic-settings = ">=2.3.4"
# --- YENİ SATIR ---
jinja2 = "^3.1.4"
# --- YENİ SATIR SONU ---

[tool.poetry.dev-dependencies]
pytest = "^8.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"